--- a/NetEvent/Client/Pages/Administration/Index.razor
+++ b/NetEvent/Client/Pages/Administration/Index.razor
@@ -11,7 +11,7 @@
             <MudStack AlignItems="AlignItems.Stretch">
                 <MudButton Variant="Variant.Filled" Href="/administration/users" Class="pa-4" Style="height: 200px;">
                     <MudStack Row="true">
-                        <MudIcon Icon="@Icons.Outlined.Group" Size="Size.Large"></MudIcon>
+                        <MudIcon Icon="@Icons.Material.Outlined.Group" Size="Size.Large"></MudIcon>
                         <MudText Typo="Typo.h6"><strong>@Users?.Count</strong> @Localize["Administration.Index.Users"]</MudText>
                     </MudStack>
                 </MudButton>                
@@ -21,7 +21,7 @@
             <MudStack AlignItems="AlignItems.Stretch">
                 <MudButton Variant="Variant.Filled" Href="/administration/events" Class="pa-4" Style="height: 200px;">
                     <MudStack Row="true">
-                        <MudIcon Icon="@Icons.Outlined.Event" Size="Size.Large"></MudIcon>
+                        <MudIcon Icon="@Icons.Material.Outlined.Event" Size="Size.Large"></MudIcon>
                         <MudText Typo="Typo.h6"><strong>@Events?.Count</strong> @Localize["Administration.Index.Events"]</MudText>
                     </MudStack>
                 </MudButton>
