--- a/NetEvent/Client/Pages/Administration/SystemInfo.razor
+++ b/NetEvent/Client/Pages/Administration/SystemInfo.razor
@@ -28,11 +28,11 @@
             <MudTd DataLabel="Healthy">
                 @if (context.Healthy)
                 {
-                        <MudIcon Icon="@Icons.Filled.CheckCircle" Color="Color.Success" />
+                        <MudIcon Icon="@Icons.Material.Filled.CheckCircle" Color="Color.Success" />
                 }
                 else
                 {
-                        <MudIcon Icon="@Icons.Filled.Error" Color="Color.Error" />
+                        <MudIcon Icon="@Icons.Material.Filled.Error" Color="Color.Error" />
                 }         
             </MudTd>
         </RowTemplate>
